got the images to appear with long description list

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -2,11 +2,15 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
+.smallImg {
   object-fit: contain;
   width: 200px;
   height: 200px;
 }
+
+/* .imageDescription {
+
+} */
 
 .alignment{
   height: 350px;
