--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -2,6 +2,14 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.asset {
+  color: white;
+}
+
+.top-border {
+  background-color: #333a40;
+}
+
 .smallImg {
   object-fit: contain;
   height: 200px;
