--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -45,18 +45,12 @@
   font-weight: 600;
 }
 
-.price {
-  color: gray;
-  font-size: .75rem;
-  padding: 1%;
-}
-
 .description {
   font-size: .75rem;
 }
 
 .media {
-  width: 300px
+  width: 300px;
 }
 
 .centered {
