--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -69,24 +69,24 @@
 }
 
 .fade-in{
-  animation: animationFrames ease 1.5s;
-  animation-iteration-count: 1.5;
+  animation: animationFrames ease 1s;
+  animation-iteration-count: 1;
   transform-origin: 50% 50%;
   animation-fill-mode:forwards;
-  -webkit-animation: animationFrames ease 1.5s;
-  -webkit-animation-iteration-count: 1.5;
+  -webkit-animation: animationFrames ease 1s;
+  -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 50% 50%;
   -webkit-animation-fill-mode:forwards;
-  -moz-animation: animationFrames ease 1.5s;
-  -moz-animation-iteration-count: 1.5;
+  -moz-animation: animationFrames ease 1s;
+  -moz-animation-iteration-count: 1;
   -moz-transform-origin: 50% 50%;
   -moz-animation-fill-mode:forwards;
-  -o-animation: animationFrames ease 1.5s;
-  -o-animation-iteration-count: 1.5;
+  -o-animation: animationFrames ease 1s;
+  -o-animation-iteration-count: 1;
   -o-transform-origin: 50% 50%;
   -o-animation-fill-mode:forwards;
-  -ms-animation: animationFrames ease 1.5s;
-  -ms-animation-iteration-count: 1.5;
+  -ms-animation: animationFrames ease 1s;
+  -ms-animation-iteration-count: 1;
   -ms-transform-origin: 50% 50%;
   -ms-animation-fill-mode:forwards;
 }
@@ -144,4 +144,14 @@
     opacity:1;
     -ms-transform:  translate(0px,0px)  ;
   }
+}
+
+.shadow {
+  	-webkit-box-shadow: 0 8px 6px -6px #65afa3;
+	   -moz-box-shadow: 0 8px 6px -6px #65afa3;
+	        box-shadow: 0 8px 6px -6px #65afa3;
+}
+
+.contain {
+  width: 100%
 }
