--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -2,6 +2,22 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#bag .p1[data-count]:after{
+  position:absolute;
+  right:10%;
+  top:8%;
+  content: attr(data-count);
+  font-size:40%;
+  padding:.2em;
+  border-radius:50%;
+  line-height:1em;
+  color: white;
+  background:rgba(255,0,0,.85);
+  text-align:center;
+  min-width: 1em;
+  margin-top: 10px;
+}
+
 .smallImg {
   object-fit: contain;
   height: 200px;
