--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -171,9 +171,16 @@
 }
 
 
-#exampleModal {
-  height: 250px;
+.exampleModal {
+  /* position: fixed;
+  z-index: 1; */
+  height: 125px;
   width: 250px;
   border: 1px solid lightgray;
   border-radius: 5px;
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 1.3em;
 }
