--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -173,14 +173,40 @@
 
 .exampleModal {
   /* position: fixed;
-  z-index: 1; */
+  z-index: 1;
   height: 125px;
   width: 250px;
   border: 1px solid lightgray;
-  border-radius: 5px;
+  border-radius: 5px; */
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgba(0,0,0,0.4);
+
+}
+
+.modal-background {
+    margin-top: 20%;
+    width: 300px;
+    height: 50%;
+    padding: 8%;
+    border: 10px solid #2860CE;
+    border-radius: 10px;
+    background-color: #2f7bd3;
+    display: inline-block;
+    position: relative;
+    border-style: outset;
 }
 
 .modal-title {
   font-weight: 700;
   font-size: 1.3em;
 }
+
+/* .hidden {
+  display: none;
+} */
