--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -191,12 +191,11 @@
 
 .modal-background {
     margin-top: 20%;
-    width: 300px;
-    height: 50%;
-    padding: 8%;
-    border: 10px solid #2860CE;
-    border-radius: 10px;
-    background-color: #2f7bd3;
+    width: 200px;
+    height: 140px;
+    border-radius: 5px;
+    padding: 15px;
+    background-color: white;
     display: inline-block;
     position: relative;
     border-style: outset;
